# tdjson-bind

./: .gitmodules  README.md  build.sbt
core/src/main/scala/io/github/ablearthy/tdjson/: TDJson.scala
native/src/: CMakeLists.txt  tdjson_jni.cpp
native/src/include/: io_github_ablearthy_tdjson_TDJson.h
project/: plugins.sbt
